<resources>
    <string name="app_name">SlamBook</string>
    <string name="welcome">Welcome</string>
    <string name="noAccount">Don\'t have an account?</string>
    <string name="login">Log in</string>
    <string name="forgotpass">Forgot password?</string>
    <string name="pass">Password</string>
    <string name="email">Email</string>
    <string name="loginImage">Login</string>
    <string name="lineBreak">or login with</string>
    <string name="lineBreakSig">or sign up with</string>
    <string name="createAccount">Create Account</string>
    <string name="name">Name</string>
    <string name="signup">Sign up</string>
    <string name="haveAccount">Already have an account?</string>
    <string name="fullname">Full Name</string>
</resources>